[package]
name = "basset_hub"
version = "0.1.0"
authors = ["EunSeong <dmstjd0182@snu.ac.kr>", "Blockwave <dev@propwave.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
snafu = { version = "0.7.0" }
rand = "0.8.4"
bnear_token = {path = "../bnear_token"}
near-decimal = "2.2.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
