[package]
name = "staking_pool"
version = "0.4.1"
authors = ["Blockwave <dev@propwave.io>", "Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "3.1.0"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
